[package]
name = "fieldfilter-derive"
version = "0.1.0"
description = "Proc macro to derive FieldFilterable"
repository = "https://github.com/fairingrey/fieldfilter"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.86", features = ["parsing"] }
quote = "1.0.15"
proc-macro2 = "1.0.36"
